# sbb

./: .dockerignore  .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: codeql-analysis.yml  gradle-publish.yml  gradle.yml  java.yml  js.yml  publich.yml  publish.yml  python.yml
java/: README.md  build.gradle  settings.gradle
java/src/main/java/com/github/rmarinsky/: SBB.java
java/src/test/java/com/github/rmarinsky/: AppendTests.java
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/src/: index.ts
js/tests/: sbb.test.ts
python/: README.md  pyproject.toml
python/sbb/: __init__.py
python/tests/: test_sbb.py
src/main/java/com/github/marinsky/: SBB.java
src/main/java/com/github/rmarinsky/: SBB.java
src/main/java/ua/marinsky/: SBB.java
src/test/java/com/github/marinsky/: AppendTests.java
src/test/java/com/github/rmarinsky/: AppendTests.java
src/test/java/ua/marinsky/: AppendTests.java
