[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-sbb"
version = "1.0.0"
description = "String Builder Builder - Fluent string concatenation for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "rmarinsky" }
]
keywords = ["string", "builder", "fluent", "concatenation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rmarinsky/sbb"
Repository = "https://github.com/rmarinsky/sbb"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
publish = [
    "hatch>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sbb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
